[gd_scene load_steps=6 format=2]

[ext_resource path="res://character/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/player.png" type="Texture" id=3]
[ext_resource path="res://assets/audio/footsteps.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/win.ogg" type="AudioStream" id=5]

[node name="Player" instance=ExtResource( 1 )]

collision_layer = 2
collision_mask = 13
script = ExtResource( 2 )
_sections_unfolded = [ "Collision" ]

[node name="Sprite" parent="." index="1"]

texture = ExtResource( 3 )
frame = 19

[node name="AnimationPlayer" parent="." index="3"]

_sections_unfolded = [ "Playback Options" ]

[node name="Camera2D" type="Camera2D" parent="." index="8"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="FootstepsPlayer" type="AudioStreamPlayer" parent="." index="9"]

stream = ExtResource( 4 )
volume_db = -30.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="WinPlayer" type="AudioStreamPlayer" parent="." index="10"]

stream = ExtResource( 5 )
volume_db = -30.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]


